AM_CPPFLAGS = -Ich-crawler
lib_LTLIBRARIES = libch-crawler.la
libch_crawler_la_SOURCES = crawler.c  crawler_cmd.c  crawler_cmd.h  crawler_private.h  crawler_task.c  crawler_task_cmd.c  crawler_task_cmd.h  crawler_task.h  crawler_utils.c  crawler_utils.h
libch_crawler_adir = $(includedir)/ch-crawler
nobase_include_HEADERS = ch-crawler/exp_crawler.h
